reference problem solved with babel[english]

--- a/report/main.run.xml
+++ b/report/main.run.xml
@@ -54,6 +54,7 @@
       <file>blx-unicode.def</file>
       <file>blx-compat.def</file>
       <file>biblatex.def</file>
+      <file>blx-natbib.def</file>
       <file>standard.bbx</file>
       <file>numeric.bbx</file>
       <file>numeric-comp.bbx</file>
@@ -61,6 +62,7 @@
       <file>numeric-comp.cbx</file>
       <file>ieee.cbx</file>
       <file>biblatex.cfg</file>
+      <file>english.lbx</file>
     </requires>
   </internal>
   <external package="biblatex" priority="5" active="0">
